# nova-brief

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: master-plan.md  multi-model-evaluation-testing.md  phase1-agent-upgrades-complete.md  phase2-agent-intelligence-implemented.md  phase3-agent-policies.md  phase4-agent-eval-upgrades.md  prd.md
docs/prompts/: agents-upgrade-ph2.md  agents-upgrade.md  eval-upgrades.md  ui-ux.md
docs/specs/: api-contract.md  data-schemas.md  evaluation-harness.md  module-specs.md  observability-logging.md  ops-runbook.md  performance-cost.md  repo-scaffold.md  security-compliance.md  ui-ux-design.md
eval/: harness.py  judge.py  multi_model_harness.py  multi_model_results_20250816_211531.json  multi_model_results_20250818_133935.json  phase2_harness.py  report_generator.py  results_20250816_173921.json  results_20250817_075058.json  rubric.py  topics.json
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/: __init__.py  app.py  config.py
src/agent/: __init__.py  analyst.py  critic.py  orchestrator.py  planner.py  reader.py  searcher.py  verifier.py  writer.py
src/observability/: __init__.py  logging.py  tracing.py
src/providers/: __init__.py  cerebras_client.py  openrouter_client.py  search_providers.py
src/storage/: __init__.py  models.py
src/tools/: __init__.py  content_quality.py  eta.py  fetch_url.py  parse_pdf.py  web_search.py
src/ui/: __init__.py  main_panel.py  results.py  sidebar.py
tests/: __init__.py  test_cerebras_api.py  test_model_system.py  test_mvp.py  test_phase4_implementation.py  test_planner_fix.py  test_ui_integration.py  verify_phase4_ui.py
tools/scripts/: run_model_comparison.sh  setup_dev.sh  test_agent_policies.py  test_analyst_contradictions.py  test_analyst_explicit_contradictions.py  test_analyst_json.py  test_cerebras_routing.py  test_critic_agent.py  test_openrouter.py  test_phase2_harness.py  test_planner_iterative.py  test_reader_structural.py  test_search_providers.py  test_ui_model_selection.py  test_writer_audience.py  test_writer_fix.py  test_writer_json.py
