[project]
name = "nova-brief"
version = "0.1.0"
description = "Deep research agent that creates analyst-grade briefs with citations"
authors = [{name = "Nova Brief Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "openai>=1.12.0",
    "httpx>=0.25.0",
    "trafilatura>=1.6.0",
    "pypdf>=3.17.0",
    "tldextract>=5.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "duckduckgo-search>=6.1.0",
    "fpdf2>=2.8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
